DB and User Role. Complete Version

--- a/WebSite/Views/ManageRole/Create.cshtml
+++ b/WebSite/Views/ManageRole/Create.cshtml
@@ -7,7 +7,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Crear Rol</h2>
+<h2>Crear Roles</h2>
 
 @using ( Html.BeginForm(null, null, FormMethod.Post ,new { enctype = "multipart/form-data" })) {
     @Html.ValidationSummary(true)
