--- a/WebSite/Views/ManageRole/Index.cshtml
+++ b/WebSite/Views/ManageRole/Index.cshtml
@@ -3,16 +3,17 @@
 @model List<BusinessManager.Models.RoleDataModel>
 
 @{
-    ViewBag.Title = "Rol Index";
+    ViewBag.Title = "Roles Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2 class="block">Administracion de Rol</h2>
+<h2 class="block">Administracion de Roles</h2>
 <div class="column1-unit">
     <table>
         <tr>
             
-	<th class="top" scope="col">Name</th>            
+	<th class="top" scope="col">Name</th>
+	 <th class="top">Usuarios</th>            
             <th class="top" scope="col"></th>
         </tr>
         @if(Model != null)
@@ -21,7 +22,11 @@
             {
                 <tr>
                     
-	<td scope="row">@item.Name</td>                
+	<td scope="row">@item.Name</td>
+	 
+	 <td> 
+	 @Html.Action("UserroleChildrenField", new { id = @item.ID })
+	 </td>                
                     <td>
                         @Html.ActionLink("Edit", "Edit", new { id=item.ID })
                         <a class="deleteItem" item="@item.ID" href="#">Delete</a>
@@ -35,7 +40,7 @@
 <hr class="clear-contentunit" />
 
 <div class="admin-create">
-    @Html.ActionLink("Crear Rol", "Create")
+    @Html.ActionLink("Crear Roles", "Create")
 </div>
 
 @section scripts{ 
@@ -48,7 +53,7 @@
 
             $(".deleteItem").on("click", function () {
 
-                if (confirm("Are you sure you want to delete this Rol?")) {
+                if (confirm("Are you sure you want to delete this Roles?")) {
 
                     var itemID = $(this).attr("item");
 
