--- a/WebSite/Views/ManageUserrole/Index.cshtml
+++ b/WebSite/Views/ManageUserrole/Index.cshtml
@@ -3,16 +3,17 @@
 @model List<BusinessManager.Models.UserroleDataModel>
 
 @{
-    ViewBag.Title = "Roles de Usuario Index";
+    ViewBag.Title = "Roles Usuario Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2 class="block">Administracion de Roles de Usuario</h2>
+<h2 class="block">Administracion de Roles Usuario</h2>
 <div class="column1-unit">
     <table>
         <tr>
             
-	<th class="top" scope="col">UserID</th>            
+	<th class="top" scope="col">UserID</th>
+	<th class="top" scope="col">RoleID</th>            
             <th class="top" scope="col"></th>
         </tr>
         @if(Model != null)
@@ -21,10 +22,11 @@
             {
                 <tr>
                     
-	<td scope="row">@item.UserID</td>                
+	<td scope="row">@item.UserID</td>
+	<td scope="row">@item.RoleID</td>                
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id=item.UserID })
-                        <a class="deleteItem" item="@item." href="#">Delete</a>
+                        @Html.ActionLink("Edit", "Edit", new { id=item.ID })
+                        <a class="deleteItem" item="@item.ID" href="#">Delete</a>
                     </td>
                 </tr>
             }
@@ -35,7 +37,7 @@
 <hr class="clear-contentunit" />
 
 <div class="admin-create">
-    @Html.ActionLink("Crear Roles de Usuario", "Create")
+    @Html.ActionLink("Crear Roles Usuario", "Create")
 </div>
 
 @section scripts{ 
@@ -48,7 +50,7 @@
 
             $(".deleteItem").on("click", function () {
 
-                if (confirm("Are you sure you want to delete this Roles de Usuario?")) {
+                if (confirm("Are you sure you want to delete this Roles Usuario?")) {
 
                     var itemID = $(this).attr("item");
 
